1.18.2 - 0.0.27 - Fixed problem with structures in ShadowChunkGenerator on Forge, fixed missing surface generators on Paper
- Thanks to Marcato on discord for identifying the surface generator fix
- OTGNoiseChunkGenerator on Forge is still broken