@@ -6,15 +6,13 @@ import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Random;
-import java.util.stream.Collectors;
 
-import com.google.common.collect.ImmutableMultimap;
 import com.pg85.otg.core.gen.OTGChunkGenerator;
 import com.pg85.otg.forge.biome.OTGBiomeProvider;
 import com.pg85.otg.forge.materials.ForgeMaterialData;
 import com.pg85.otg.interfaces.IBiome;
+import com.pg85.otg.interfaces.IBiomeResourceLocation;
 import com.pg85.otg.interfaces.ICachedBiomeProvider;
 import com.pg85.otg.util.BlockPos2D;
 import com.pg85.otg.util.ChunkCoordinate;
@@ -25,27 +23,18 @@ import com.pg85.otg.util.materials.LocalMaterials;
 
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import it.unimi.dsi.fastutil.objects.ObjectList;
-import net.minecraft.data.worldgen.StructureFeatures;
+import net.minecraft.core.Holder;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Registry;
-import net.minecraft.resources.ResourceKey;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.chunk.ProtoChunk;
 import net.minecraft.world.level.chunk.ChunkStatus;
 import net.minecraft.world.level.chunk.ChunkAccess;
 import net.minecraft.world.level.chunk.ChunkGenerator;
 import net.minecraft.server.level.WorldGenRegion;
-import net.minecraft.world.level.levelgen.feature.ConfiguredStructureFeature;
-import net.minecraft.world.level.levelgen.feature.StructureFeature;
 import net.minecraft.world.level.StructureFeatureManager;
-import net.minecraft.world.level.biome.Biome;
-import net.minecraft.world.level.levelgen.GenerationStep.Decoration;
-import net.minecraft.world.level.levelgen.StructureSettings;
-import net.minecraft.world.level.levelgen.feature.configurations.StructureFeatureConfiguration;
 import net.minecraft.world.level.levelgen.structure.StructureSet;
-import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraft.server.level.ServerLevel;
 
 /**
@@ -111,7 +100,7 @@ public class ShadowChunkGenerator
 	// These chunks are highly likely to be requested next, so we can filter out any that need noisegen/base terrain gen and
 	// pre-emptively generate and cache them asynchronously. When MC requests those chunks a moment later as part of worldgen,
 	// we return the async generated chunk data.
-	public void queueChunksForWorkerThreads(WorldGenRegion worldGenRegion, StructureFeatureManager manager, ChunkAccess chunk, ChunkGenerator chunkGenerator, OTGBiomeProvider biomeProvider, OTGChunkGenerator otgChunkGenerator, StructureSettings dimensionStructuresSettings, int worldHeightCap)
+	public void queueChunksForWorkerThreads(WorldGenRegion worldGenRegion, StructureFeatureManager manager, ChunkAccess chunk, ChunkGenerator chunkGenerator, OTGBiomeProvider biomeProvider, OTGChunkGenerator otgChunkGenerator, int worldHeightCap)
 	{
 		if(this.maxConcurrent > 0)
 		{
@@ -120,7 +109,7 @@ public class ShadowChunkGenerator
 				for(int i = 0; i < this.maxConcurrent; i++)
 				{
 					//@SuppressWarnings("deprecation")
-					Worker thread = this.new Worker(i, this.unloadedChunksCache, this.chunksToLoad, this.chunksBeingLoaded, worldGenRegion.getLevel(), chunkGenerator, biomeProvider, otgChunkGenerator, dimensionStructuresSettings, worldHeightCap);
+					Worker thread = this.new Worker(i, this.unloadedChunksCache, this.chunksToLoad, this.chunksBeingLoaded, worldGenRegion.getLevel(), chunkGenerator, biomeProvider, otgChunkGenerator, worldHeightCap);
 					this.threads[i] = thread;
 					thread.start(worldGenRegion.getRandom());
 				}
@@ -166,7 +155,7 @@ public class ShadowChunkGenerator
 		}
 	}
 
-	private ForgeChunkBuffer getUnloadedChunk(OTGChunkGenerator otgChunkGenerator, int worldHeightCap, Random random, ChunkCoordinate chunkCoordinate, ServerLevel level)
+	private ForgeChunkBuffer getUnloadedChunk(OTGChunkGenerator otgChunkGenerator, Random random, ChunkCoordinate chunkCoordinate, ServerLevel level)
 	{
 		ProtoChunk chunk = new ProtoChunk(new ChunkPos(chunkCoordinate.getChunkX(), chunkCoordinate.getChunkZ()), null, level, level.registryAccess().registryOrThrow(Registry.BIOME_REGISTRY), null);
 		ForgeChunkBuffer buffer = new ForgeChunkBuffer(chunk);
@@ -180,7 +169,7 @@ public class ShadowChunkGenerator
 		ObjectList<JigsawStructureData> structures = new ObjectArrayList<>(10);
 		ObjectList<JigsawStructureData> junctions = new ObjectArrayList<>(32);
 
-		otgChunkGenerator.populateNoise(worldHeightCap, random, buffer, buffer.getChunkCoordinate(), structures, junctions);
+		otgChunkGenerator.populateNoise(random, buffer, buffer.getChunkCoordinate(), structures, junctions);
 		return buffer;
 	}
 
@@ -291,13 +280,11 @@ public class ShadowChunkGenerator
 	// Unfortunately this requires fetching structure data in a non-thread-safe manner, so we can't do async
 	// chunkgen (base terrain) for these chunks and have to avoid them.
 
-	public boolean checkHasVanillaStructureWithoutLoading(ServerLevel serverWorld, ChunkGenerator chunkGenerator, OTGBiomeProvider biomeProvider, StructureSettings dimensionStructuresSettings, ChunkCoordinate chunkCoordinate, ICachedBiomeProvider cachedBiomeProvider, boolean noiseAffectingStructuresOnly)
+	public boolean checkHasVanillaStructureWithoutLoading(ServerLevel serverWorld, ChunkGenerator chunkGenerator, OTGBiomeProvider biomeProvider, ChunkCoordinate chunkCoordinate, ICachedBiomeProvider cachedBiomeProvider, boolean noiseAffectingStructuresOnly)
 	{
 		// Since we can't check for structure components/references, only structure starts,
 		// we'll keep a safe distance away from any vanilla structure start points.
 		int radiusInChunks = 5;
-		ProtoChunk chunk;
-		ChunkPos chunkpos;		
 		if (serverWorld.getServer().getWorldData().worldGenSettings().generateFeatures())
 		{
 			List<ChunkCoordinate> chunksToHandle = new ArrayList<>();
@@ -320,38 +307,31 @@ public class ShadowChunkGenerator
 					}
 				}
 			}
-			
+			// TODO: Let users specify these ranges in world config? Also allow explicit range for a given modded structure
 			@SuppressWarnings("unchecked")
 			ArrayList<String>[] structuresPerDistance = new ArrayList[radiusInChunks];
 			structuresPerDistance[4] = new ArrayList<String>(Arrays.asList(
-				new String[] {
-					"minecraft:village",
-					"minecraft:endcity",
-					"minecraft:bastion_remnant",
-					"minecraft:monument",
-					"minecraft:mansion"
-				}
-			));
-			structuresPerDistance[3] = new ArrayList<String>(Arrays.asList(new String[]{}));
-			structuresPerDistance[2] = new ArrayList<String>(Arrays.asList(new String[]{}));
+				"minecraft:village",
+				"minecraft:endcity",
+				"minecraft:bastion_remnant",
+				"minecraft:monument",
+				"minecraft:mansion"));
+			structuresPerDistance[3] = new ArrayList<String>(List.of());
+			structuresPerDistance[2] = new ArrayList<String>(List.of());
 			structuresPerDistance[1] = new ArrayList<String>(Arrays.asList(
-				new String[] {
-					"minecraft:jungle_pyramid",
-					"minecraft:desert_pyramid",
-					"minecraft:ruined_portal",
-					"minecraft:swamp_hut",
-					"minecraft:igloo",
-					"minecraft:shipwreck",
-					"minecraft:pillager_outpost",
-					"minecraft:ocean_ruin"
-				}
-			));
-			structuresPerDistance[0] = new ArrayList<String>(Arrays.asList(new String[]{}));
+				"minecraft:jungle_pyramid",
+				"minecraft:desert_pyramid",
+				"minecraft:ruined_portal",
+				"minecraft:swamp_hut",
+				"minecraft:igloo",
+				"minecraft:shipwreck",
+				"minecraft:pillager_outpost",
+				"minecraft:ocean_ruin"));
+			structuresPerDistance[0] = new ArrayList<String>(List.of());
 
 			for(ChunkCoordinate chunkToHandle : chunksToHandle)
 			{
-				chunk = new ProtoChunk(new ChunkPos(chunkToHandle.getChunkX(), chunkToHandle.getChunkZ()), null, serverWorld, serverWorld.registryAccess().registryOrThrow(Registry.BIOME_REGISTRY), null);
-				chunkpos = chunk.getPos();
+				ChunkPos chunkpos = new ChunkPos(chunkToHandle.getChunkX(), chunkToHandle.getChunkZ());
 				int distance = (int)Math.floor(Math.sqrt(Math.pow (chunkToHandle.getChunkX() - chunkCoordinate.getChunkX(), 2) + Math.pow (chunkToHandle.getChunkZ() - chunkCoordinate.getChunkZ(), 2)));
 				
 				// Borrowed from STRUCTURE_STARTS phase of chunkgen, only determines structure start point
@@ -359,88 +339,100 @@ public class ShadowChunkGenerator
 
 				// TODO: Optimise this for biome lookups, fetch a whole region of noise biome info at once?
 				IBiome biome = cachedBiomeProvider.getNoiseBiome((chunkpos.x << 2) + 2, (chunkpos.z << 2) + 2);
-				
-				for(Entry<StructureFeature<?>, ImmutableMultimap<ConfiguredStructureFeature<?, ?>, ResourceKey<Biome>>> supplier : chunkGenerator.getSettings().configuredStructures.entrySet())
+				IBiomeResourceLocation biomeLocation = biome.getBiomeConfig().getRegistryKey();
+
+				var structureSetStream = chunkGenerator.possibleStructureSets();
+				// We can get the registry name from ForgeRegistryEntry, which StructureFeature extends
+				// We can ask if the structure spawns in a given biome with a predicate
+				// We can see if the configured structure feature affects noise by checking its adaptnoise boolean
+				// filter noise affecting only, if needed
+				if (noiseAffectingStructuresOnly) {
+					structureSetStream = structureSetStream.filter(set -> {
+						if (set.unwrap().right().isEmpty()) return false;
+						var entries = set.unwrap().right().get().structures();
+						for (StructureSet.StructureSelectionEntry entry : entries) {
+							if (entry.structure().value().adaptNoise)
+								return true;
+						}
+						return false;
+					});
+				}
+				// filter for biome
+				structureSetStream = structureSetStream.filter(set -> {
+					for (StructureSet.StructureSelectionEntry structure : set.value().structures()) {
+						// Potentially slow; vanilla code uses set::contains as its predicate
+						if (structure.generatesInMatchingBiome(biomeHolder -> {
+							var registryName = biomeHolder.value().getRegistryName();
+							return registryName != null && registryName.toString().equals(biomeLocation.toResourceLocationString());
+						})) {
+							return true;
+						}
+					}
+					return false;
+				});
+
+				// We now only have the structures to check for avoidance for. Loop through
+				for (Holder<StructureSet> holder: structureSetStream.toList())
 				{
-					StructureFeature<?> structure = supplier.getKey();
-					if(
-						structure.step() == Decoration.SURFACE_STRUCTURES &&
-						(
-							!noiseAffectingStructuresOnly ||
-							StructureFeatures.NOISE_AFFECTING_FEATURES.contains(structure)
-						)
-					)
+					if (holder.unwrap().right().isEmpty())
 					{
-						List<ConfiguredStructureFeature<?,?>> structuresForBiome = supplier.getValue().entries().stream()
-							.filter(d -> d.getValue().toString().equals(biome.getBiomeConfig().getRegistryKey().toResourceLocationString()))
-							.map(a -> a.getKey())
-							.collect(
-								Collectors.toList()
-							)
-						;
-						ResourceLocation structureRegistryKey = ForgeRegistries.STRUCTURE_FEATURES.getKey(structure);
-						String structureRegistryName = structureRegistryKey.toString();
-						for(ConfiguredStructureFeature<?, ?> configuredStructure : structuresForBiome)
+						return false;
+					}
+					var set = holder.unwrap().right().get();
+					// Only do this once, instead of for each structure in the set
+					if (!set.placement().isFeatureChunk(chunkGenerator, serverWorld.getSeed(), chunkpos.x, chunkpos.z))
+					{
+						// We don't have a placement here for this set, so skip this set
+						continue;
+					}
+
+					for (StructureSet.StructureSelectionEntry entry : set.structures())
+					{
+						var registryName = entry.structure().value().feature.getRegistryName();
+						if (registryName == null)
 						{
-							if(!structureRegistryKey.getNamespace().equals("minecraft"))
+							return false;
+						}
+						var searchDistance = 0;
+						// Use default search distance of 1 for modded structures
+						if (!registryName.getNamespace().equals("minecraft"))
+						{
+							searchDistance = 1;
+						} else {
+							for (int i = 0; i < structuresPerDistance.length; i++)
 							{
-								// For modded structures, use a default radius
-								int moddedStructuresDefaultRadius = 1;
-								if(hasStructureStart(configuredStructure, dimensionStructuresSettings, serverWorld.getSeed(), chunkpos))
+								if (structuresPerDistance[i].contains(registryName.toString()))
 								{
-									chunksHandled.put(chunkToHandle, new Integer(moddedStructuresDefaultRadius));
-									if(moddedStructuresDefaultRadius >= distance)
-									{
-										if(noiseAffectingStructuresOnly)
-										{
-											synchronized(this.hasVanillaNoiseStructureChunkCache)
-											{
-												this.hasVanillaNoiseStructureChunkCache.putAll(chunksHandled);
-											}
-										} else {
-											synchronized(this.hasVanillaStructureChunkCache)
-											{
-												this.hasVanillaStructureChunkCache.putAll(chunksHandled);
-											}
-										}									
-										return true;
-									}
-								}
-							} else {
-								for(int i = structuresPerDistance.length - 1; i > 0; i--)
-								{
-									ArrayList<String> structuresAtDistance = structuresPerDistance[i];
-									if(structuresAtDistance.contains(structureRegistryName))
-									{
-										if(hasStructureStart(configuredStructure, dimensionStructuresSettings, serverWorld.getSeed(), chunkpos))
-										{
-											chunksHandled.put(chunkToHandle, new Integer(i));
-											if(i >= distance)
-											{
-												if(noiseAffectingStructuresOnly)
-												{
-													synchronized(this.hasVanillaNoiseStructureChunkCache)
-													{													
-														this.hasVanillaNoiseStructureChunkCache.putAll(chunksHandled);
-													}
-												} else {
-													synchronized(this.hasVanillaStructureChunkCache)
-													{
-														this.hasVanillaStructureChunkCache.putAll(chunksHandled);
-													}
-												}							
-												return true;
-											}
-										}
-										break;
-									}
+									searchDistance = i;
+									break;
 								}
 							}
 						}
+						// We already know there is a structure here, because check was moved out of the for loop
+						chunksHandled.put(chunkToHandle, searchDistance);
+
+						if (searchDistance >= distance)
+						{
+							if(noiseAffectingStructuresOnly)
+							{
+								synchronized(this.hasVanillaNoiseStructureChunkCache)
+								{
+									this.hasVanillaNoiseStructureChunkCache.putAll(chunksHandled);
+								}
+							} else {
+								synchronized(this.hasVanillaStructureChunkCache)
+								{
+									this.hasVanillaStructureChunkCache.putAll(chunksHandled);
+								}
+							}
+							return true;
+						}
 					}
 				}
+				// Add everything else with a distance of 0
 				chunksHandled.putIfAbsent(chunkToHandle, 0);
 			}
+			// Make sure to save everything afterwards
 			if(noiseAffectingStructuresOnly)
 			{
 				synchronized(this.hasVanillaNoiseStructureChunkCache)
@@ -487,36 +479,15 @@ public class ShadowChunkGenerator
 		return false;
 	}
 
-	// Taken from PillagerOutpostStructure.isNearVillage
-	private boolean hasStructureStart(ConfiguredStructureFeature<?, ?> structureFeature, StructureSettings dimensionStructuresSettings, long seed, ChunkPos chunkPos)
-	{
-		//Now a StructurePlacement?
-		StructureSet set = null;
-		set.placement().isFeatureChunk(null, seed, chunkPos.x, chunkPos.z);
-		StructureFeatureConfiguration structureSeparationSettings = dimensionStructuresSettings.getConfig(structureFeature.feature);
-		if (structureSeparationSettings != null)
-		{
-			ChunkPos chunkPosPotential = structureFeature.feature.getPotentialFeatureChunk(structureSeparationSettings, seed, chunkPos.x, chunkPos.z);
-			if (
-				chunkPos.x == chunkPosPotential.x &&
-				chunkPos.z == chunkPosPotential.z
-			) {
-				return true;
-			}
-			return false;
-		}
-		return false;
-	}
-
 	// /otg mapterrain
 
 	// /otg mapterrain fetches chunks in order to create a map of base terrain, without touching any of the caches or
 	// resources used for worldgen or bo4 shadowgen, since the chunks aren't actually supposed to generate in the world.
 	// We won't get any density based smoothing applied to noisegen for vanilla structures, but that's ok for /otg mapterrain.
 
-	public ForgeChunkBuffer getChunkWithoutLoadingOrCaching(OTGChunkGenerator otgChunkGenerator, int worldHeightCap, Random random, ChunkCoordinate chunkCoordinate, ServerLevel level)
+	public ForgeChunkBuffer getChunkWithoutLoadingOrCaching(OTGChunkGenerator otgChunkGenerator, Random random, ChunkCoordinate chunkCoordinate, ServerLevel level)
 	{
-		return getUnloadedChunk(otgChunkGenerator, worldHeightCap, random, chunkCoordinate, level);
+		return getUnloadedChunk(otgChunkGenerator, random, chunkCoordinate, level);
 	}
 
 	// BO4's / Smoothing Areas
@@ -526,7 +497,7 @@ public class ShadowChunkGenerator
 	// Async worker threads may also pre-emptively shadowgen and cache unloaded chunks, which speeds up base terrain generation but also BO4's.
 	// Note: BO4's are always processed on the worldgen thread, never on a worker thread, since they are not a part of base terrain generation.
 
-	private LocalMaterialData[] getBlockColumnInUnloadedChunk(OTGChunkGenerator otgChunkGenerator, int worldHeightCap, Random worldRandom, int x, int z, ServerLevel level)
+	private LocalMaterialData[] getBlockColumnInUnloadedChunk(OTGChunkGenerator otgChunkGenerator, Random worldRandom, int x, int z, ServerLevel level)
 	{
 		BlockPos2D blockPos = new BlockPos2D(x, z);
 		ChunkCoordinate chunkCoord = ChunkCoordinate.fromBlockCoords(x, z);
@@ -546,7 +517,7 @@ public class ShadowChunkGenerator
 		if (chunk == null)
 		{
 			// Generate a chunk without loading/decorating it
-			chunk = getUnloadedChunk(otgChunkGenerator, worldHeightCap, worldRandom, chunkCoord, level).getChunk();
+			chunk = getUnloadedChunk(otgChunkGenerator, worldRandom, chunkCoord, level).getChunk();
 			synchronized(this.workerLock)
 			{
 				this.unloadedChunksCache.put(chunkCoord, chunk);
@@ -574,17 +545,17 @@ public class ShadowChunkGenerator
 		return blocksInColumn;
 	}
 
-	public LocalMaterialData getMaterialInUnloadedChunk(OTGChunkGenerator otgChunkGenerator, int worldHeightCap, Random worldRandom, int x, int y, int z, ServerLevel level)
+	public LocalMaterialData getMaterialInUnloadedChunk(OTGChunkGenerator otgChunkGenerator, Random worldRandom, int x, int y, int z, ServerLevel level)
 	{
-		LocalMaterialData[] blockColumn = getBlockColumnInUnloadedChunk(otgChunkGenerator, worldHeightCap, worldRandom, x, z, level);
+		LocalMaterialData[] blockColumn = getBlockColumnInUnloadedChunk(otgChunkGenerator, worldRandom, x, z, level);
 		return blockColumn[y];
 	}
 
-	public int getHighestBlockYInUnloadedChunk(OTGChunkGenerator otgChunkGenerator, int worldHeightCap, Random worldRandom, int x, int z, boolean findSolid, boolean findLiquid, boolean ignoreLiquid, boolean ignoreSnow, ServerLevel level)
+	public int getHighestBlockYInUnloadedChunk(OTGChunkGenerator otgChunkGenerator, Random worldRandom, int x, int z, boolean findSolid, boolean findLiquid, boolean ignoreLiquid, boolean ignoreSnow, ServerLevel level)
 	{
 		int height = -1;
 
-		LocalMaterialData[] blockColumn = getBlockColumnInUnloadedChunk(otgChunkGenerator, worldHeightCap, worldRandom, x, z, level);
+		LocalMaterialData[] blockColumn = getBlockColumnInUnloadedChunk(otgChunkGenerator, worldRandom, x, z, level);
 		ForgeMaterialData material;
 		boolean isLiquid;
 		boolean isSolid;
@@ -628,10 +599,9 @@ public class ShadowChunkGenerator
 		private final ChunkGenerator chunkGenerator;
 		private final OTGBiomeProvider biomeProvider;
 		private final OTGChunkGenerator otgChunkGenerator;
-		private final StructureSettings dimensionStructuresSettings;
 		private final int worldHeightCap;
 
-		Worker(int index, FifoMap<ChunkCoordinate, ChunkAccess> unloadedChunksCache, List<ChunkCoordinate> chunksToLoad, ChunkCoordinate[] chunksBeingLoaded, ServerLevel serverWorld, ChunkGenerator chunkGenerator, OTGBiomeProvider biomeProvider, OTGChunkGenerator otgChunkGenerator, StructureSettings dimensionStructuresSettings, int worldHeightCap)
+		Worker(int index, FifoMap<ChunkCoordinate, ChunkAccess> unloadedChunksCache, List<ChunkCoordinate> chunksToLoad, ChunkCoordinate[] chunksBeingLoaded, ServerLevel serverWorld, ChunkGenerator chunkGenerator, OTGBiomeProvider biomeProvider, OTGChunkGenerator otgChunkGenerator, int worldHeightCap)
 		{
 			this.index = index;
 			this.unloadedChunksCache = unloadedChunksCache;
@@ -641,7 +611,6 @@ public class ShadowChunkGenerator
 			this.chunkGenerator = chunkGenerator;
 			this.biomeProvider  = biomeProvider;
 			this.otgChunkGenerator = otgChunkGenerator;
-			this.dimensionStructuresSettings = dimensionStructuresSettings;
 			this.worldHeightCap = worldHeightCap;
 		}
 
@@ -683,10 +652,10 @@ public class ShadowChunkGenerator
 				}
 				if(coords != null)
 				{
-					if(!checkHasVanillaStructureWithoutLoading(this.serverWorld, this.chunkGenerator, this.biomeProvider, this.dimensionStructuresSettings, coords, this.otgChunkGenerator.getCachedBiomeProvider(), true))
+					if(!checkHasVanillaStructureWithoutLoading(this.serverWorld, this.chunkGenerator, this.biomeProvider, coords, this.otgChunkGenerator.getCachedBiomeProvider(), true))
 					{
 						// Generate a chunk without loading/decorating it.
-						ChunkAccess cachedChunk = getUnloadedChunk(this.otgChunkGenerator, this.worldHeightCap, this.worldRandom, coords, this.serverWorld.getLevel()).getChunk();
+						ChunkAccess cachedChunk = getUnloadedChunk(this.otgChunkGenerator, this.worldRandom, coords, this.serverWorld.getLevel()).getChunk();
 						synchronized(workerLock)
 						{
 							this.unloadedChunksCache.put(coords, cachedChunk);
